Implement VirtualMemory for POSIX on JVM